lexion_lang/tests/snapshots/compile_err__struct_declaration_is_not_a_value.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x struct declaration 'Point' is not a value; use a named struct literal
   ,-[tests/fixtures/errors/semantics/struct_declaration_value.lex:7:17]
 6 | fn main() {
 7 |     let point = Point;
   :                 ^^|^^
   :                   `-- here
 8 | }
   `----
