lexion_lang/tests/snapshots/compile_err__type_mismatch.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x expected type 'i32', instead got 'bool'
   ,-[tests/fixtures/errors/semantics/type_mismatch.lex:2:18]
 1 | fn main() {
 2 |     let x: i32 = true;
   :                  ^^|^
   :                    `-- here
 3 | }
   `----
