lexion_lang/tests/snapshots/compile_err__unsupported_address_assignment.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x assignment through member, index, or dereference expressions is not supported yet
   ,-[tests/fixtures/errors/semantics/unsupported_address_assignment.lex:7:5]
 6 |     let value = point();
 7 |     value.x = 1;
   :     ^^^|^^^
   :        `-- here
 8 | }
   `----

  x assignment through member, index, or dereference expressions is not supported yet
    ,-[tests/fixtures/errors/semantics/unsupported_address_assignment.lex:11:5]
 10 |     let text = "abc";
 11 |     text[0] = text[1];
    :     ^^^|^^^
    :        `-- here
 12 | }
    `----

  x assignment through member, index, or dereference expressions is not supported yet
    ,-[tests/fixtures/errors/semantics/unsupported_address_assignment.lex:16:5]
 15 |     let reference = &value;
 16 |     *reference = 2;
    :     ^^^^^|^^^^
    :          `-- here
 17 | }
    `----
