lexion_lang/tests/snapshots/compile_err__unsupported_char_comparison.snap
---
source: lexion_lang/tests/compile_err.rs
expression: "errors.join(\"\\n\")"
snapshot_kind: text
---
  x no matching definition for operator '==' with operands [char, char]
   ,-[tests/fixtures/errors/semantics/unsupported_char_comparison.lex:2:12]
 1 | fn same(left: char, right: char) -> bool {
 2 |     return left == right;
   :            ^^^^^^|^^^^^^
   :                  `-- here
 3 | }
   `----
